syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommGetPvpDataRequestProtobuf";

message	CommGetPvpDataRequest  {
	optional	string	identifier = 10;
	optional	uint32	agree_buy_pvp_times = 11;
	optional	uint32	tianti_data_expected = 12;
}